<resources>
    <string name="app_name">Wall E</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="title_activity_login">Log In</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_register">Register</string>
    <string name="phone_number">Phone Number</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="register_using">Register Using</string>
    <string name="title_activity_maps">Map</string>
    <string name="logout">Logout</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="nearby">Nearby</string>
    <string name="popular">Popular</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_setting">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="friends">Friends</string>
    <string name="following">Following</string>
    <string name="follower">Follower</string>
    <string name="followers">Followers</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="video">Video</string>
    <string name="profile">Profile</string>
    <string name="my_messages">My Messages</string>
    <string name="setting">Setting</string>
    <string name="settings">Settings</string>
    <string name="full_name">Full Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="your_location">Your Location</string>
    <string name="name_invalid">Name is Invalid</string>
    <string name="update_profile">Update Profile</string>
    <string name="prompt_location">Location</string>
    <string name="zero">0</string>
    <string name="click_back_to_exit">Click Back to Exit</string>
    <string name="log_in_other_option">Login Other Option</string>
    <string name="log_in_with_google">Sign in with Google+</string>
    <string name="log_in_with_facebook">Sign in with Facebook</string>
    <string name="log_in_with_twitter">Sign in with Twitter</string>
    <string name="link_to_google">Link to Google</string>
    <string name="link_to_facebook">Link to Facebook</string>
    <string name="link_to_twitter">Link to Twitter</string>
    <string name="link">Link</string>
    <string name="tap_to_chat">Tap to Chat</string>
    <string name="name">Name</string>
    <string name="live_stream">Live Stream</string>
    <string name="watch_stream">Watch Stream</string>
    <string name="zero_views">0 views</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="location">Location</string>
    <string name="title_activity_stream_firebase">StreamFirebaseActivity</string>
    <string name="title_activity_youtube_stream">YoutubeStreamActivity</string>
    <string name="by_continuing">By continuing you agree to Term of Services and Privacy Policy</string>
    <string name="untitled">Untitled</string>
    <string name="title">Title</string>
    <string name="start_streaming">Start Streaming</string>
    <string name="stream_title">Stream Title</string>
    <string name="add_hashtag">Add Tag Separated by space( )</string>
    <string name="title_is_invalid">Title is Invalid</string>
    <string name="upload_your_thumbnail">Please upload your thumbnail</string>
    <string name="service_is_not_ready_try_again">Services is not ready. Please try again!</string>
    <string name="image_is_still_uploading">Image is still uploading. Please wait!</string>
    <string name="prompt_phone">Phone Number</string>
    <string name="prompt_birth_date">Birth Date</string>
    <string name="verifying_phone_number">Veryfing Phone Number. Please enter code sent to your phone!</string>
    <string name="save">Save</string>
    <string name="resend_code_in">Resend Code in:</string>
    <string name="zero_second">0 second</string>
    <string name="verification_code">Verification Code</string>
    <string name="resend">Resend</string>
    <string name="close">Close</string>
    <string name="please_input_verification_code">Please input your verification Code</string>
    <string name="biography">Biography</string>
    <string name="seconds">Seconds</string>
    <string name="please_update_your_profile">Please update your profile before starting your streaming</string>
    <string name="camera_permission_granted">Camera permission granted</string>
    <string name="camera_permission_not_granted">Camera permission not granted</string>
    <string name="record_audio_permission_granted">Record audio permission granted</string>
    <string name="record_audio_permission_not_granted">Record audio permission not granted</string>
    <string name="profile_updated_succesfully">Profile Updated succesfully</string>
    <string name="views">Views</string>
    <string name="view">view</string>
    <string name="my_show">My Show</string>
    <string name="please_watch_my_show_in">Please watch my show in</string>
    <string name="hashtag">Hashtag</string>
    <string name="prompt_search">Name, title, location, hashtag etc</string>
    <string name="are_you_sure_to_exit">Are you sure you want to exit this live streaming?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="video_framerate">Video Frame Rate</string>
    <string name="frame_rate">Frame Rate</string>
    <string name="mute_audio">Mute Audio</string>
    <string name="general_setting">General Setting</string>
    <string name="save_setting">Save Setting</string>
    <string name="frame_rate_label">Frame Rate:</string>
    <string name="mute_audio_label">Mute Audio:</string>
    <string name="set_your_setting_based_on_internet_connection">Set your setting based on your internet connection and quota.</string>
    <string name="your_setting_saved_succesfully">Your setting is saved successfully!</string>
    <string name="please_verify_your_phone">Please verify your phone number</string>
    <string name="title_activity_my_profile">MyProfileActivity</string>
    <string name="ranking">Ranking</string>
    <string name="signin_or_sign_up">Sign in or sign up</string>
    <string name="inbox">Inbox</string>
    <string name="report_spam">Report Spam</string>
    <string name="archive_message">Archive Message</string>
    <string name="delete_message">Delete Message</string>
</resources>