<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".activities.LoginActivity"
    android:id="@+id/container">

    <!-- Login progress -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/back_signup">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/back_signup"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/back_login" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent_black40" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="26dp"
            android:text="@string/signin_or_sign_up"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

    </FrameLayout>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/check_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    style="@style/loginButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@mipmap/ic_twitter"
                    android:onClick="loginTwitterAction"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/log_in_with_twitter" />

                <Button
                    style="@style/loginButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@mipmap/ic_facebook"
                    android:onClick="loginFacebookAction"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/log_in_with_facebook" />

                <Button
                    style="@style/loginButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@mipmap/ic_google"
                    android:onClick="loginGoogleAction"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/log_in_with_google" />

                <Button
                    android:id="@+id/botton_login_other"
                    style="@style/loginDefaultStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@mipmap/ic_email"
                    android:onClick="loginOtherAction"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/log_in_other_option" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/by_continuing" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>



    <com.google.android.gms.common.SignInButton
        android:id="@+id/login_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:visibility="gone"/>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        app:srcCompat="@mipmap/ic_facebook"
        android:visibility="gone" />

    <com.twitter.sdk.android.core.identity.TwitterLoginButton
        android:id="@+id/twitter_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:visibility="gone" />

</LinearLayout>